--- a/ci-user/user/Cargo.toml
+++ b/ci-user/user/Cargo.toml
@@ -12,6 +12,7 @@ bitflags = "1.2.1"
 spin = "0.9"
 lock_api = "=0.4.6"
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
+riscv = { git = "https://gitee.com/rcore-os/riscv", features = ["inline-asm"] }
 
 [profile.release]
 opt-level = "z" # Optimize for size.
