--- a/os1/Cargo.toml
+++ b/os1/Cargo.toml
@@ -3,6 +3,7 @@ name = "os"
 version = "0.1.0"
 authors = ["Yifan Wu <shinbokuow@163.com>"]
 edition = "2018"
+riscv = { git = "https://gitee.com/rcore-os/riscv", features = ["inline-asm"] }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
